objects/Group__c.object
<CustomObject>
    <fields>
        <fullName>ABH_Service_Location__c</fullName>
        <label>ABH Service Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albany, NY (IHM, MHA, and CCMU Business)</fullName>
                </value>
                <value>
                    <fullName>Atlanta GA</fullName>
                </value>
                <value>
                    <fullName>San Diego, CA</fullName>
                </value>
                <value>
                    <fullName>Wallingford, CT</fullName>
                </value>
                <value>
                    <fullName>Indianapolis, IN (National business)</fullName>
                </value>
                <value>
                    <fullName>Indianapolis, IN (FEP business)</fullName>
                </value>
                <value>
                    <fullName>Mason, OH</fullName>
                </value>
                <value>
                    <fullName>St. Louis, MO</fullName>
                </value>
                <value>
                    <fullName>Richmond, VA</fullName>
                </value>
                <value>
                    <fullName>Denver, CO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ARMS_Subsequent_Enrollment__c</fullName>
        <label>ARMS Subsequent Enrollment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountRegion__c</fullName>
        <description>Fetches the Region of Account Associated with the Group</description>
        <formula>TEXT(Account__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>It is the Account associated with the Group.</description>
        <inlineHelpText>It defines the Account associated with the Group.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_legal_Name__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actuarial_Funding_Code_WGS_Only__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actuarial Funding Code (WGS Only)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnualizedPremium__c</fullName>
        <inlineHelpText>For New Business Opportunities this is the &quot;Estimated Annualized Premium&quot; on the Renewal Opportunities this is the actual &quot;Annualized Premium&quot; that comes from the Group Contract</inlineHelpText>
        <label>Annualized Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>Text(Account__r.Anthem_Entity__c)</formula>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Implementer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Implementer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <description>This field is built as a part of story number PRDCRM-46556</description>
        <label>Billing Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Invoices (containing all Suffixes)</fullName>
                </value>
                <value>
                    <fullName>One Invoice per LOB</fullName>
                </value>
                <value>
                    <fullName>One Invoice per Employee Category</fullName>
                </value>
                <value>
                    <fullName>One Invoice per Employee Class</fullName>
                </value>
                <value>
                    <fullName>Customized Billing Arrangement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COB_Count__c</fullName>
        <label>COB Count</label>
        <summaryForeignKey>COB__c.Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CallServiceCenter__c</fullName>
        <inlineHelpText>Enter the Call Service Center for this Group Number</inlineHelpText>
        <label>Call Service Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albany NY</fullName>
                </value>
                <value>
                    <fullName>Atlanta GA</fullName>
                </value>
                <value>
                    <fullName>Camarillo CA</fullName>
                </value>
                <value>
                    <fullName>Colo Springs CO</fullName>
                </value>
                <value>
                    <fullName>Columbus OH</fullName>
                </value>
                <value>
                    <fullName>Dearborn MI</fullName>
                </value>
                <value>
                    <fullName>Denver CO</fullName>
                </value>
                <value>
                    <fullName>Egan MN</fullName>
                </value>
                <value>
                    <fullName>Fond du Lac WI</fullName>
                </value>
                <value>
                    <fullName>Indianapolis IN</fullName>
                </value>
                <value>
                    <fullName>Local Serv Cntr</fullName>
                </value>
                <value>
                    <fullName>Mason OH</fullName>
                </value>
                <value>
                    <fullName>Middletown NY</fullName>
                </value>
                <value>
                    <fullName>Midland, GA</fullName>
                </value>
                <value>
                    <fullName>Newbury Park CA</fullName>
                </value>
                <value>
                    <fullName>Orem UT</fullName>
                </value>
                <value>
                    <fullName>Pomona CA</fullName>
                </value>
                <value>
                    <fullName>Portland ME</fullName>
                </value>
                <value>
                    <fullName>Richmond VA</fullName>
                </value>
                <value>
                    <fullName>St Louis MO</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClaimServiceCenter__c</fullName>
        <inlineHelpText>Enter the Claim Service Center for this Group Number</inlineHelpText>
        <label>Claim Service Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albany NY</fullName>
                </value>
                <value>
                    <fullName>Atlanta GA</fullName>
                </value>
                <value>
                    <fullName>Camarillo CA</fullName>
                </value>
                <value>
                    <fullName>Colo Springs CO</fullName>
                </value>
                <value>
                    <fullName>Columbus OH</fullName>
                </value>
                <value>
                    <fullName>Dearborn MI</fullName>
                </value>
                <value>
                    <fullName>Denver CO</fullName>
                </value>
                <value>
                    <fullName>Diamond Bar CA</fullName>
                </value>
                <value>
                    <fullName>Egan MN</fullName>
                </value>
                <value>
                    <fullName>Fond du Lac WI</fullName>
                </value>
                <value>
                    <fullName>Indianapolis IN</fullName>
                </value>
                <value>
                    <fullName>Local Serv Cntr</fullName>
                </value>
                <value>
                    <fullName>Manila</fullName>
                </value>
                <value>
                    <fullName>Mason OH</fullName>
                </value>
                <value>
                    <fullName>Middletown NY</fullName>
                </value>
                <value>
                    <fullName>Columbus GA</fullName>
                    <label>Midland GA</label>
                </value>
                <value>
                    <fullName>Newbury Park CA</fullName>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                </value>
                <value>
                    <fullName>Orem UT</fullName>
                </value>
                <value>
                    <fullName>Pomona CA</fullName>
                </value>
                <value>
                    <fullName>Portland ME</fullName>
                </value>
                <value>
                    <fullName>Richmond VA</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClaimSystem__c</fullName>
        <label>Claim System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NASCO</fullName>
                </value>
                <value>
                    <fullName>WGS 2.0</fullName>
                </value>
                <value>
                    <fullName>ACES</fullName>
                </value>
                <value>
                    <fullName>ALICS</fullName>
                </value>
                <value>
                    <fullName>AniTa</fullName>
                </value>
                <value>
                    <fullName>CHIPS</fullName>
                </value>
                <value>
                    <fullName>COMPASS</fullName>
                </value>
                <value>
                    <fullName>CS90</fullName>
                </value>
                <value>
                    <fullName>DeCare Dental</fullName>
                </value>
                <value>
                    <fullName>FACETS</fullName>
                </value>
                <value>
                    <fullName>WDS</fullName>
                </value>
                <value>
                    <fullName>GBD FACETS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claims_Route_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claims Route Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobra_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cobra Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collab_Account_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Collab Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field is used for National Accounts when requesting a group number. It is referenced in both a flow and email template, which should be adjusted prior to modifying this field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Toll_Free_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Service Toll Free Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Date_Migrated_to_WGS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Migrated to WGS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveryChannel__c</fullName>
        <inlineHelpText>Select the Private Exchange or Brokerage/Direct</inlineHelpText>
        <label>Delivery Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brokerage/Direct</fullName>
                </value>
                <value>
                    <fullName>AON Hewitt Corporate Exchange</fullName>
                </value>
                <value>
                    <fullName>Mercer Marketplace Exchange</fullName>
                </value>
                <value>
                    <fullName>Towers Watson One Exchange</fullName>
                </value>
                <value>
                    <fullName>Buck Consulting RightOpt</fullName>
                </value>
                <value>
                    <fullName>Anthem Health Marketplace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESR_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ESR Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligibility_Count__c</fullName>
        <label>Eligibility Count</label>
        <summaryForeignKey>Eligibility__c.Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Eligibility_File_PG_Ongoing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eligibility File PG Ongoing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Category__c</fullName>
        <inlineHelpText>Optional (rarely requested). If the Customer is requesting a specific Group/Case Number please enter. Otherwise it will be system generated (most common)</inlineHelpText>
        <label>Applicable Employee Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Employee_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Service_Rep_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employer Service Rep Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer_Service_Rep_Requirement__c</fullName>
        <label>Employer Service Rep Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes with Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Service_Representative_ESR2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer Service Representative (ESR)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value>Anthem Associates</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>ESR_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer_Service_Representative_ESR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer Service Representative (ESR)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Service_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer Service Representative (ESR)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exception_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exception Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange__c</fullName>
        <label>Exchange</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Exchange</fullName>
                </value>
                <value>
                    <fullName>Bloom</fullName>
                </value>
                <value>
                    <fullName>AON/Hewitt</fullName>
                </value>
                <value>
                    <fullName>Xerox/Buck</fullName>
                </value>
                <value>
                    <fullName>Towers Watson</fullName>
                </value>
                <value>
                    <fullName>Anthem Health Marketplace</fullName>
                </value>
                <value>
                    <fullName>Mercer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclude_From_NA_Imps_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this box is checked, the group number is being excluded from National Implementations Reporting &amp; Dashboards.</inlineHelpText>
        <label>Exclude From NA Imps Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinancingRollup__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Financing Rollup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Impression_Check__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>First Impression Check</inlineHelpText>
        <label>First Impression Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Count__c</fullName>
        <label>Funding Count</label>
        <summaryForeignKey>Funding__c.Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GroupFundingType__c</fullName>
        <label>Group Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GroupId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupLink__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_390, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_390)) &amp; GroupId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GroupLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupNumberRequestStatus__c</fullName>
        <description>Pick list to determine the status of a requested group number on an newly added group</description>
        <label>Group Number Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Requested</fullName>
                    <default>true</default>
                    <label>Not Requested</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Requested and Assigned</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupServicesGroupNumberNotes__c</fullName>
        <description>BW 2015
This field was created to allow for Group Services to capture additional details in the event the group is not eligible for a Group Number</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Group Services fills out this field when a Group is not eligible for a Group Number</inlineHelpText>
        <label>Group Services Group Number Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Name_Link__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;Id,Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Name Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Card_On_Going_Performance_Guarantee__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card On-Going Performance Guarantee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Card_Performance_Guarantee__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card Performance Guarantee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Link__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementation Case Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_PGs__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementation PGs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initial_ARMS_Enrollment__c</fullName>
        <label>Initial ARMS Enrollment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Implementation_Satisfaction_PG__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Implementation Satisfaction PG</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used, in order for system to indicate if a group record is inactive or inactive.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPartOfAMigration__c</fullName>
        <label>Is part of a migration?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsPrivateExchangePEX__c</fullName>
        <description>BW 2015</description>
        <formula>IF(ISPICKVAL(DeliveryChannel__c,&quot;Brokerage/Direct&quot;),&quot;No&quot;,&quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Private Exchange (PEX)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Complexity__c</fullName>
        <inlineHelpText>Level of Complexity as assigned by Implementations for Book of Business Reports</inlineHelpText>
        <label>Level of Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1 High Complexity</fullName>
                </value>
                <value>
                    <fullName>Level 2 Medium Complexity</fullName>
                </value>
                <value>
                    <fullName>Level 3 Low Complexity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LineofBusiness__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD&amp;D</fullName>
                </value>
                <value>
                    <fullName>AIM</fullName>
                </value>
                <value>
                    <fullName>Anthem Personalized Well Being</fullName>
                </value>
                <value>
                    <fullName>Benefits Admin</fullName>
                </value>
                <value>
                    <fullName>DeCare Dental</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Employee Asst Program</fullName>
                </value>
                <value>
                    <fullName>Expatriate</fullName>
                </value>
                <value>
                    <fullName>Flexible Spending Acct</fullName>
                </value>
                <value>
                    <fullName>FSA</fullName>
                </value>
                <value>
                    <fullName>Health and Wellness</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>LTD</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Network Based</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Premium Only Plan-Section 125</fullName>
                </value>
                <value>
                    <fullName>STD</fullName>
                </value>
                <value>
                    <fullName>Stop Loss</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Workers Compensation</fullName>
                </value>
                <value>
                    <fullName>ABA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoggedInUserProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedInUserProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBU_Codes__c</fullName>
        <inlineHelpText>If Unknown, Contact Underwriting To Obtain.</inlineHelpText>
        <label>MBU Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>65800000 CA</fullName>
                </value>
                <value>
                    <fullName>65800000 IN</fullName>
                </value>
                <value>
                    <fullName>CCN00000 CO</fullName>
                </value>
                <value>
                    <fullName>NAA00000 NH</fullName>
                </value>
                <value>
                    <fullName>NAC00000</fullName>
                </value>
                <value>
                    <fullName>NAE00000 ME</fullName>
                </value>
                <value>
                    <fullName>NAH00000 GA</fullName>
                </value>
                <value>
                    <fullName>NAH00000 OH</fullName>
                </value>
                <value>
                    <fullName>NAI00000 IN</fullName>
                </value>
                <value>
                    <fullName>NAK00000 KY</fullName>
                </value>
                <value>
                    <fullName>NAM00000 MO</fullName>
                </value>
                <value>
                    <fullName>NAO00000 OH</fullName>
                </value>
                <value>
                    <fullName>NAT00000 CT</fullName>
                </value>
                <value>
                    <fullName>NAV00000 VA</fullName>
                </value>
                <value>
                    <fullName>NAW00000 WI</fullName>
                </value>
                <value>
                    <fullName>NAY00000 NY</fullName>
                </value>
                <value>
                    <fullName>NCM00000 CA</fullName>
                </value>
                <value>
                    <fullName>NNC00000 NV</fullName>
                </value>
                <value>
                    <fullName>NSO00000 OH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Med_Mgmt_Service_Location__c</fullName>
        <label>Med Mgmt Service Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IHM- Albany NY</fullName>
                </value>
                <value>
                    <fullName>IHM- Atlanta GA</fullName>
                </value>
                <value>
                    <fullName>IHM- St Louis MO</fullName>
                </value>
                <value>
                    <fullName>MHA-  St Louis MO</fullName>
                </value>
                <value>
                    <fullName>CCMU- Albany NY</fullName>
                </value>
                <value>
                    <fullName>CCM-West</fullName>
                </value>
                <value>
                    <fullName>CCM-Georgia</fullName>
                </value>
                <value>
                    <fullName>CCM-Central</fullName>
                </value>
                <value>
                    <fullName>CCM-Virginia</fullName>
                </value>
                <value>
                    <fullName>CCM-New  York</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Management_Platform__c</fullName>
        <label>Medical Management Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WMDS</fullName>
                </value>
                <value>
                    <fullName>ECC</fullName>
                </value>
                <value>
                    <fullName>TriMed</fullName>
                </value>
                <value>
                    <fullName>ACMS</fullName>
                </value>
                <value>
                    <fullName>UM WMDS/HRS CM ( UM - Utilization Management, CM - Case Management)</fullName>
                </value>
                <value>
                    <fullName>UM ECC/HRS CM ( UM - Utilization Management, CM - Case Management)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>